--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "material-design-icons": "^3.0.1",
     "ngx-facebook": "^2.4.0",
     "roboto-fontface": "^0.9.0",
     "rxjs": "^5.5.6",
