--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "material-design-icons": "^3.0.1",
+    "ng2-dnd": "^5.0.2",
     "ngx-facebook": "^2.4.0",
     "roboto-fontface": "^0.9.0",
     "rxjs": "^5.5.6",
